fixed extra white space on top on event details

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -144,5 +144,5 @@ ul.profile-dropdown a:hover {
 }
 
 .nav-bar + div, .nav-bar + main, .nav-bar + form {
-    padding-top:80px;
+    padding-top:60px;
 }
